First working version of the extension

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,8 +1,8 @@
 {
-	"name": "Awesome Extension",
-	"version": "0.0.0",
-	"description": "An awesome new browser extension",
-	"homepage_url": "https://github.com/fregante/browser-extension-template",
+	"name": "Image alt text generator extension",
+	"version": "0.0.1",
+	"description": "Fill in missing image descriptions using text + vision Large Language Models",
+	"homepage_url": "https://github.com/dain/image-alt-text-generator-extension",
 	"manifest_version": 3,
 	"minimum_chrome_version": "100",
 	"browser_specific_settings": {
@@ -14,17 +14,13 @@
 	"icons": {
 		"128": "icon.png"
 	},
-	"permissions": [
-		"storage"
-	],
-	"host_permissions": [
-		"https://github.com/*"
-	],
+	"permissions": ["storage"],
+	"host_permissions": ["https://github.com/*"],
 	"content_scripts": [
 		{
-			"matches": [ "https://github.com/fregante/browser-extension-template/*" ],
-			"js": [ "content.js" ],
-			"css": [ "content.css" ],
+			"matches": ["<all_urls>"],
+			"js": ["content.js"],
+			"css": ["content.css"],
 			"run_at": "document_end"
 		}
 	],
