--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
 		"lint:css": "stylelint source/**/*.css",
 		"lint:js": "xo",
 		"test": "run-p lint:* build",
-		"watch": "parcel watch source/manifest.json --dist-dir distribution --no-cache --no-hmr"
+		"watch": "parcel watch source/manifest.json --dist-dir distribution --no-cache --no-hmr",
+		"test-page": "parcel serve test_page/index.html --port 7890",
+		"web-ext": "web-ext run -t chromium",
+		"all": "run-p watch test-page web-ext"
 	},
 	"browserslist": [
 		"last 1 Chrome version",
@@ -23,6 +26,7 @@
 		"extends": "stylelint-config-xo"
 	},
 	"dependencies": {
+		"ndjson-readablestream": "^1.0.7",
 		"webext-base-css": "^1.4.1",
 		"webext-options-sync": "^3.1.0"
 	},
@@ -32,18 +36,19 @@
 		"parcel": "^2.6.2",
 		"stylelint": "^14.9.1",
 		"stylelint-config-xo": "^0.21.0",
+		"web-ext": "^7.8.0",
 		"xo": "^0.50.0"
 	},
 	"webExt": {
 		"sourceDir": "distribution",
 		"run": {
 			"startUrl": [
-				"https://github.com/fregante/browser-extension-template"
+				"http://localhost:7890"
 			]
 		}
 	},
- 	"@parcel/bundler-default-bug": "https://github.com/parcel-bundler/parcel/issues/8071",
- 	"@parcel/bundler-default": {
- 		"minBundles": 10000000
- 	}
+	"@parcel/bundler-default-bug": "https://github.com/parcel-bundler/parcel/issues/8071",
+	"@parcel/bundler-default": {
+		"minBundles": 10000000
+	}
 }
